# occult

./: .clang-format  .clangformat  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CREDITS.md  LICENSE-BSD  README.md  RESOURCES.md  Testing.md  ast.hpp  build.bat  build.sh  build_windows.bat  bytecode_generator.cpp  bytecode_generator.hpp  clean.sh  codegen.cpp  codegen.hpp  elf_header.cpp  error.cpp  error.hpp  get_libaraies_tcc.sh  install_gcc.bat  lexer.cpp  lexer.hpp  lexer_maps.hpp  main.cpp  mbuildtcc.bat  parser.cpp  parser.hpp  parser_maps.hpp  run_clangformat.sh  run_test_cases.sh  source.cpp  validate_tests.bat  validate_tests.ps1  validate_tests.sh  win_instructions.md
.github/workflows/: update-submodules.yml
assembler/: code_generator.hpp
code_generation/: code_gen.cpp  code_gen.hpp  compiler.cpp  compiler.hpp
data structures/: tree.hpp
data_structures/: tree.cpp  tree.hpp
examples/: calculator.occ  factorial.occ  fibonacci.occ  generic_dynamic_array.occ  generic_hashmap.occ  generic_linked_list.occ  generic_tree.occ  generic_vec.occ  integer_linked_list.occ  linear_regression.occ  module_test.occ  struct_linked_list.occ
jit/: tinycc_jit.cpp  tinycc_jit.hpp
lexer/: convert_readable.cpp  convert_readable.hpp  finder.cpp  finder.hpp  lexer.cpp  lexer.hpp  lexer_maps.hpp  number_parser.hpp  tokens.cpp  tokens.hpp
lib/: casting.occ  io.occ  math.occ  printf.occ  stdio.occ  stdio_test.occ  strlib.occ
occult/: main.cpp
parser/: ast.cpp  ast.hpp  error.cpp  error.hpp  parser.cpp  parser.hpp  parser_maps.hpp  semantic_analysis.cpp  semantic_analysis.hpp
setup/: setup.cpp  setup.hpp
src/: main.cpp
static_analyzer/: static_analyzer.cpp  static_analyzer.hpp
test_cases/: 2d_array.occ  a.occ  array.occ  array_error_test.occ  array_second.occ  casting.occ  fibonacci.occ  forext_func_call.occ  forloop.occ  forloop_extensions.occ  func_call.occ  func_defs_top_file.occ  match_test.occ  math.occ  pointer_math.occ  pointers.occ  return.occ  rnum.occ  test.occ  test_import.occ  test_loop.occ  test_new_array_at.occ  test_recursion.occ  trees_and_mem_unsafety.occ  unsafe.occ
tests/: 100K.occ  10K.occ  1K.occ  1bil_iter_test.occ  ackermann.occ  add.occ  array.occ  assignment_boolean_test.occ  bitshift_test.occ  cast_debug.occ  cast_test.occ  complex_test.occ  complex_test_final.occ  complex_test_v2.occ  compound_assignment_test.occ  custom_malloc_test.occ  deref_precedence_test.occ  double_total.occ  factorial.occ  float_test.occ  float_test_2.occ  gcd.occ  generics_advanced_test.occ  generics_test.occ  hello_world.occ  incremental_test.occ  incremental_test_v2.occ  memory_test.occ  multi_array_test.occ  mylib.occ  pointer_test.occ  recursion.occ  ref_arg_test.occ  return.occ  shellcode_test.occ  signed_test.occ  struct_args_test.occ  struct_basic_test.occ  struct_linked_list_test.occ  struct_nested_test.occ  (+110 more)
translator/: code_generator.cpp  code_generator.hpp  code_translator.cpp  code_translator.hpp
(+77 files in other folders)
